# StarShot

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  install_dev_deps.bat  pyproject.toml  run_cli_demo.bat  server_status.bat  start_server.bat  stop_server.bat
backend/starshot/: __init__.py  cli.py
backend/starshot/api/: app.py
docs/context/: ai_changelog.md  ai_handoff.md  deck_data.md  desperation_implementation_plan.md  implementation_status.md  rules_0.2_migration_plan.md
docs/rules/: Privacy_Policy.txt  StarBreach_Expansion.txt  StarCommand_Expansion.txt  Terms_of_Service.txt  rules_0.1.txt  rules_0.2.txt  rules_implementation.md
frontend/debug/: index.html  ship-sim.html
frontend/v2/: about.html  admin.html  index.html
resources/boss_designs/: boss_push_check.json  breachmarauder.json  kingrex.json  testerboss01.json
resources/decks/: AGENTS.md
resources/ship_designs/: lightningbug.json  vanguard.json
scripts/: cleanup_orphaned_ship_designs.py  demo_cli.py  server_control.py
tests/: test_api.py  test_bauble_placement.py  test_boss_designer.py  test_boss_spec.py  test_campaign.py  test_card_effects.py  test_deck_data.py  test_desperation_deck.py  test_desperation_integration.py  test_desperation_semantics.py  test_persistence.py  test_player_ships.py  test_rules_engine.py  test_serialization.py  test_ship_layout.py  test_ship_simulation.py  test_star_breach.py  test_star_breach_features.py  test_v2_accounts.py  test_v2_ai.py  test_v2_api.py  test_v2_names.py  test_vault_placement.py
tools/: extract_rules_pdf.py
(+85 files in other folders)
