[project]
name = "starshot"
version = "0.1.0"
description = "Server-authoritative rules engine and web host for StarShot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[project.scripts]
starshot = "starshot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/starshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
